mcww_web/css/imageEditor.css
.mcww-image-editor-container {
    cursor: crosshair;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    overflow: visible !important;

    .canvas-layer {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: 2px solid var(--border-color-primary);
        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
    }
    #drawing-canvas {
        z-index: 10;
        background-color: transparent;
    }
    #image-canvas {
        z-index: 5;
    }
    #brush-preview-canvas {
        z-index: 15;
        pointer-events: none;
    }
    #image-editor-bg img {
        max-width: 100%;
        max-height: 100%;
    }
}

.mcww-canvas-wrapper {
    width: 100%;
    overflow: visible !important;
}

.color-picker-label {
    margin-top: auto;
    margin-right: auto;
}

.color-picker-html {
    margin-top: auto;
    margin-bottom: auto;
    display: inline-flex;
    width: fit-content;
    min-width: 130px !important;
    label {
        margin-top: auto;
        margin-bottom: auto;
        margin-right: 10px;
    }
    input {
        background: none;
    }
}

.input-image-column {
    gap: 3px;
}

#brushSizeInput, div:has(>#brushSizeInput) {
    background: none;
    box-shadow: none;
    border: none;
}
#brushSizeInput label span, #brushSizeInput div.head {
    margin: 0;
}
#brushSizeInput input[type="number"] {
    background: none;
}

.html-container:has(.image-editor-waiting-indicator) {
    margin-bottom: -10px;
    &:not(:is(body.block-image-editor-inputs *)) {
        display: none;
    }
}
.mcww-page-ui.image_editor {
    transition: opacity 0.2s ease-in-out;
    &:is(body.block-image-editor-inputs *) {
        opacity: 70%;
        cursor: wait !important;
        &>* {
            pointer-events: none !important;
        }
    }
}

